k8s/minikube/ingress-azure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld
  template:
    metadata:
      labels:
        app: aks-helloworld
    spec:
      containers:
        - name: aks-helloworld
          image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: aks-helloworld
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: aks-helloworld.b199c1c52ede48eb94fb.eastus2.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld
                port:
                  number: 80
    - host: b199c1c52ede48eb94fb.eastus2.aksapp.io
      http:
        paths:
          - path: /api/v1/finance
            pathType: Prefix
            backend:
              service:
                name: finance
                port:
                  number: 9001
          - path: /api/v1/interior
            pathType: Prefix
            backend:
              service:
                name: interior
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular
                port:
                  number: 80
