k8s/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /api/finance
        pathType: Prefix
        backend:
            service:
                name: finance
                port:
                  number: 9001
      - path: /api/v1/interior
        pathType: Prefix
        backend:
          service:
            name: interior
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-python
            port:
              number: 8080
